--- a/nixpkgs/config/i3/config
+++ b/nixpkgs/config/i3/config
@@ -51,7 +51,8 @@ bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
-bindsym $mod+XF86Display exec --no-startup-id xrandr --auto
+bindsym XF86Display exec ls ~/.screenlayout/* | rofi -dmenu | xargs -r -t sh -c  # Screen mode switcher
+bindsym $mod+XF86Display exec xrandr --auto  # Reset screen
 
 bindsym $mod+slash exec xdotool key XF86AudioPlay
 bindsym $mod+bracketright exec xdotool key XF86AudioNext
