i3: Add xcwd for opening term in cwd
Via: https://www.reddit.com/r/i3wm/comments/bt4otr/how_can_i_get_the_current_working_directory_of_a/eoug7sw/

--- a/nixpkgs/config/i3/config
+++ b/nixpkgs/config/i3/config
@@ -108,6 +108,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec $term --working-directory "$(xcwd)"
 
 # start a terminal in a fresh workspace
 # TODO: https://github.com/acrisci/i3ipc-python/blob/master/examples/workspace-new.py
