--- a/nixpkgs/config/i3/status.toml
+++ b/nixpkgs/config/i3/status.toml
@@ -56,6 +56,7 @@ block = "temperature"
 collapsed = false
 interval = 20
 format = "{min}~{max}°"
+chip = "coretemp-*"
 
 [[block]]
 block = "battery"
