home: Refactor into common components between desktop and laptop

--- a/home/config/i3/status.toml
+++ b/home/config/i3/status.toml
@@ -58,13 +58,13 @@ interval = 20
 format = "{min}~{max}°"
 chip = "coretemp-*"
 
-[[block]]
-block = "battery"
-interval = 10
-show = "both"
+#[[block]]
+#block = "battery"
+#interval = 10
+#show = "both"
 
-[[block]]
-block = "backlight"
+#[[block]]
+#block = "backlight"
 
 [[block]]
 block = "toggle"
