--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -239,7 +239,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-      tray_output primary
+      #tray_output primary  # This steals the systray
       font pango:DejaVu Sans Mono, FontAwesome 12
       status_command i3status-rs ~/.config/i3/status.toml
       colors {
