home/config/i3/config: Fix typo

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -26,7 +26,7 @@ hide_edge_borders both
 new_window pixel 1
 
 # On start
-xset --no-startup-id hsetroot -solid '#000000'
+exec --no-startup-id hsetroot -solid '#000000'
 exec --no-startup-id xrdb -merge $HOME/.Xresources # Fix urxvt and friends
 exec --no-startup-id xss-lock -- screenlock # Capture lock events
 exec --no-startup-id xset dpms 300 # Turn off screen after 5min (also locks)
