--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -69,9 +69,8 @@ bindsym $mod+Mod1+space exec --no-startup-id rofi -show emoji -modi emoji
 
 # Scratchpath
 bindsym $mod+Shift+grave move scratchpad
-exec --no-startup-id $term --class "dropdown" -e tmux new-session -A -s scratch
 for_window [instance="dropdown"] move scratchpad, border pixel 2, resize set 80 ppt 50 ppt, move absolute position 300 0
-bindsym $mod+grave [instance="dropdown"] scratchpad show
+bindsym $mod+grave exec --no-startup-id i3-scratchpad "dropdown"
 
 # Workspaces
 bindsym $mod+Mod1+Right workspace next
