--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -44,7 +44,8 @@ bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
-bindsym XF86Display exec ls ~/.screenlayout/* | rofi -dmenu | xargs -r -t sh -c  # Screen mode switcher
+bindsym XF86Display exec rofi -modes 'Screens:ls ~/.screenlayout/*' -show 'Screens' | xargs -r -t sh -c  # Screen mode switcher
+bindsym $mod+b exec xclip -o | rofi -dmenu | xargs bookmark | xargs -I '{}' xdg-open obsidian://open/?path={}
 bindsym $mod+XF86Display exec xrandr --auto  # Reset screen
 
 bindsym $mod+slash exec xdotool key XF86AudioPlay
@@ -246,5 +247,7 @@ bar {
             urgent_workspace #2f343a #900000 #ffffff
       }
 }
-bindsym $mod+b bar mode toggle
+
+# Removed:
+#bindsym $mod+b bar mode toggle
 
