--- a/home/config/i3/status.toml
+++ b/home/config/i3/status.toml
@@ -1,8 +1,8 @@
+[theme]
 theme = "solarized-dark"
 
 [icons]
-name = "awesome"
-#name = "material"
+icons = "awesome5"
 
 [[block]]
 block = "focused_window"
@@ -10,32 +10,30 @@ block = "focused_window"
 [[block]]
 block = "net"
 device = "wlp2s0"
-ssid = true
-ip = true
+format = " $icon $ssid $ip "
 interval = 30
-#bitrate = true
-speed_up = false
-speed_down = false
+missing_format = ""
+
+[[block]]
+block = "net"
+device = "enp0s31f6"
+format = " $icon $ip "
+interval = 30
+missing_format = ""
 
 [[block]]
 block = "disk_space"
 path = "/"
-alias = "/"
 info_type = "available"
-unit = "GB"
+format = " $icon $used/$total "
 interval = 120
 warning = 20.0
 alert = 10.0
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{Mup}%"
-format_swap = "{SUp}%"
-#format_mem = "{Mum}MB/{MTm}MB({Mup}%)"
-#format_swap = "{SUm}MB/{STm}MB({SUp}%)"
+format = " $icon $mem_total_used_percents.eng(w:2) "
 interval = 5
-clickable = true
 warning_mem = 80
 warning_swap = 80
 critical_mem = 95
@@ -44,36 +42,31 @@ critical_swap = 95
 [[block]]
 block = "cpu"
 interval = 2
-frequency = true
-
-#[[block]]
-#block = "load"
-#interval = 5
-#format = "{1m}"
+format = " $icon $utilization $frequency "
 
 [[block]]
 block = "temperature"
-collapsed = false
 interval = 20
-format = "{min}~{max}°"
+format = " $icon $min~$max "
 chip = "coretemp-*"
 
-#[[block]]
-#block = "battery"
-#interval = 10
-#show = "both"
+[[block]]
+block = "battery"
+interval = 10
+format = " $icon $percentage {$time |} "
+missing_format = ""
 
-#[[block]]
-#block = "backlight"
+# [[block]]
+# block = "backlight"
+# format = " $icon $brightness% "
+# #missing_format = ""  # FIXME: This is missing
 
 [[block]]
 block = "toggle"
+format = " $icon R "
 command_state = "systemctl --user -q is-active redshift && echo on"
 command_on = "systemctl --user start redshift"
 command_off = "systemctl --user stop redshift"
-#icon_on = "backlight_empty"
-#icon_off = "backlight_full"
-text = "R"
 interval = 60
 
 [[block]]
@@ -82,4 +75,4 @@ block = "sound"
 [[block]]
 block = "time"
 interval = 10
-format = "%a %Y-%m-%d %l:%M%p"
+format = " $icon $timestamp.datetime(f:'%a %Y-%m-%d %l:%M%p')"
