--- a/home/config/i3/status.toml
+++ b/home/config/i3/status.toml
@@ -55,11 +55,13 @@ block = "battery"
 interval = 10
 format = " $icon $percentage {$time |} "
 missing_format = ""
+if_command = "ls /sys/class/power_supply/BAT0"
 
-# [[block]]
-# block = "backlight"
-# format = " $icon $brightness% "
-# #missing_format = ""  # FIXME: This is missing
+[[block]]
+block = "backlight"
+format = " $icon $brightness% "
+if_command = "ls /sys/class/backlight/*"
+#missing_format = ""  # FIXME: This is missing
 
 [[block]]
 block = "toggle"
