home/config/i3/status.toml: Fix brightness formatting

--- a/home/config/i3/status.toml
+++ b/home/config/i3/status.toml
@@ -59,7 +59,7 @@ if_command = "ls /sys/class/power_supply/BAT0"
 
 [[block]]
 block = "backlight"
-format = " $icon $brightness% "
+format = " $icon $brightness "
 if_command = "ls /sys/class/backlight/*"
 #missing_format = ""  # FIXME: This is missing
 
