pkgs/nvim: Tests work

--- a/pkgs/nvim/Makefile
+++ b/pkgs/nvim/Makefile
@@ -1,2 +1,5 @@
 test:
-	nix eval --impure --expr 'import ./test.nix {}'
+	nix eval --impure --expr 'import ./test.nix { inherit (import <nixpkgs> {}) lib stdenv; }'
+
+check:
+	nix flake check .  --no-build
