test.nix -> tests.nix

--- a/pkgs/nvim/Makefile
+++ b/pkgs/nvim/Makefile
@@ -1,5 +1,5 @@
 test:
-	nix eval --impure --expr 'import ./test.nix { inherit (import <nixpkgs> {}) lib stdenv; }'
+	nix eval --impure --expr 'import ./tests.nix { inherit (import <nixpkgs> {}) lib stdenv; }'
 
 check:
 	nix flake check .  --no-build
