--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -45,6 +45,7 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86Display exec rofi-screenlayout
+# TODO:  bindsym XF86RFKill exec ...
 bindsym $mod+b exec xclip -o | rofi -dmenu | xargs bookmark | xargs -I '{}' xdg-open obsidian://open/?path={}
 bindsym $mod+XF86Display exec xrandr --auto  # Reset screen
 
