home: Add nix-output-monitor, obs-studio, TODO

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -36,6 +36,7 @@ bindsym XF86MonBrightnessUp exec light -A 10
 bindsym XF86MonBrightnessDown exec light -U 10
 bindsym $mod+XF86MonBrightnessUp exec light -A 2
 bindsym $mod+XF86MonBrightnessDown exec light -U 2
+# TODO: Turn off screen button? xrandr --output eDP-1 --brightness 0
 bindsym XF86AudioRaiseVolume exec --no-startup-id volumectl up
 bindsym XF86AudioLowerVolume exec --no-startup-id volumectl down
 bindsym XF86AudioMute exec --no-startup-id volumectl mute
