nvim: Update to new stable setup, but nixvim still uses unstable

--- a/home/config/i3/status.toml
+++ b/home/config/i3/status.toml
@@ -25,7 +25,7 @@ missing_format = ""
 block = "disk_space"
 path = "/"
 info_type = "available"
-format = " $icon $used/$total "
+format = " $icon $used.eng(w:2)/$total "
 interval = 120
 warning = 20.0
 alert = 10.0
