--- a/home/config/i3/status.toml
+++ b/home/config/i3/status.toml
@@ -25,7 +25,7 @@ missing_format = ""
 block = "disk_space"
 path = "/"
 info_type = "available"
-format = " $icon $used.eng(w:2)/$total "
+format = " $icon $used.eng(w:4)/$total.eng(w:3) "
 interval = 120
 warning = 20.0
 alert = 10.0
