--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -73,7 +73,7 @@ bindsym $mod+Mod1+space exec --no-startup-id rofi -show emoji -modi emoji
 # Scratchpath
 bindsym $mod+Shift+grave move scratchpad
 for_window [instance="dropdown"] move scratchpad, border pixel 2, resize set 80 ppt 50 ppt, move absolute position 300 0
-bindsym $mod+grave exec --no-startup-id i3-scratchpad "dropdown"
+bindsym $mod+grave exec --no-startup-id scratchpad "dropdown"
 
 # Workspaces
 bindsym $mod+Mod1+Right workspace next
